# ScreenReminderDesktopApp

./: index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  logger.rs  main.rs  timer.rs
src/context/: TimerContext.tsx
src/hooks/: useTauriEvents.ts
