[package]
name = "screen-reminder"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "api-all"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
fern = "0.6"
once_cell = "1"
chrono = "0.4"